--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h1>Welcome to Smart Hustle Hub</h1>
     <p>Your all-in-one platform to make money online with modern tools, trending ideas, and powerful resources.</p>
     <div class="auth-buttons">
-      <a href="login.php" class="btn login-btn">Login</a>
+      <a href="dashboard.html" class="btn login-btn">Login</a>
       <a href="signup.php" class="btn signup-btn">Sign Up</a>
     </div>
   </div>
