--- a/offers.html
+++ b/offers.html
@@ -5,50 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Offers - Smart Hustle Hub</title>
   <link rel="stylesheet" href="dashboard.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-<body>
+<body class="dark-mode">
   <div class="dashboard">
-    <aside class="sidebar">
-      <h2>Smart Hustle Hub</h2>
+    <!-- Sidebar -->
+    <aside class="sidebar" id="sidebar">
+      <div class="logo">Smart Hustle Hub</div>
       <nav>
-        <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-        <a href="profile.html"><i class="fas fa-user"></i> Profile</a>
-        <a href="services.html"><i class="fas fa-briefcase"></i> My Services</a>
-        <a href="messages.html"><i class="fas fa-envelope"></i> Messages</a>
-        <a href="tools.html"><i class="fas fa-tools"></i> Tools</a>
-        <a href="ebooks.html"><i class="fas fa-book"></i> Ebooks</a>
-        <a href="tutorials.html"><i class="fas fa-chalkboard-teacher"></i> Tutorials</a>
-        <a href="offers.html" class="active"><i class="fas fa-gift"></i> Offers</a>
-        <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
-        <a href="#" id="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        <ul>
+          <li><a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a></li>
+          <li><a href="profile.html"><i class="fas fa-user"></i> Profile</a></li>
+          <li><a href="MyServices.html"><i class="fas fa-briefcase"></i> My Services</a></li>
+          <li><a href="messages.html"><i class="fas fa-envelope"></i> Messages</a></li>
+          <li><a href="tools.html"><i class="fas fa-toolbox"></i> Tools</a></li>
+          <li><a href="ebooks.html"><i class="fas fa-book"></i> Ebooks</a></li>
+          <li><a href="tutorials.html"><i class="fas fa-video"></i> Tutorials</a></li>
+          <li><a href="offers.html" class="active"><i class="fas fa-tags"></i> Offers</a></li>
+          <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+          <li><a href="logout.html" style="color: #ff4d4d;"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+        </ul>
       </nav>
     </aside>
 
-    <main class="main">
-      <header class="dashboard-header">
-        <h1>Latest Hustle Offers</h1>
-        <p id="time"></p>
+    <!-- Main Content -->
+    <main class="main-content">
+      <header>
+        <div class="user-info">
+          <span>Deals & Offers</span>
+          <img src="https://i.pravatar.cc/100" alt="User Profile" />
+          <button id="toggleModeBtn"><i class="fas fa-adjust"></i></button>
+          <button id="toggleMenuBtn"><i class="fas fa-bars"></i></button>
+        </div>
       </header>
 
-      <section class="offers-section">
-        <div class="offer-card">
-          <h3>Affiliate Campaign: Web Hosting</h3>
-          <p>Earn up to $100 per referral with top-tier hosting brands.</p>
-          <a href="https://example.com/hosting-offer" target="_blank" class="btn-offer">Join Offer</a>
-        </div>
-
-        <div class="offer-card">
-          <h3>Survey Platform Bonus</h3>
-          <p>Get a $10 signup bonus and promote surveys in Tier 1 countries.</p>
-          <a href="https://example.com/survey-offer" target="_blank" class="btn-offer">Join Now</a>
-        </div>
-
-        <!-- Add more offers here -->
+      <section class="offers-grid" id="offersContainer">
+        <!-- Dynamic offers inserted by JS -->
       </section>
     </main>
   </div>
 
   <script src="offers.js"></script>
+  <script>
+    document.getElementById("toggleMenuBtn").addEventListener("click", () => {
+      document.getElementById("sidebar").classList.toggle("open");
+    });
+  </script>
 </body>
 </html>
