--- a/profile.html
+++ b/profile.html
@@ -2,114 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Profile | Smart Hustle Hub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Smart Hustle Hub Profile</title>
   <link rel="stylesheet" href="dashboard.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body>
-  <div class="container">
+<body class="dark-mode">
+  <div class="dashboard">
     <!-- Sidebar -->
-    <aside class="sidebar">
+    <aside class="sidebar" id="sidebar">
       <div class="logo">Smart Hustle Hub</div>
       <nav>
-        <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-        <a href="profile.html" class="active"><i class="fas fa-user"></i> Profile</a>
-        <a href="services.html"><i class="fas fa-briefcase"></i> My Services</a>
-        <a href="messages.html"><i class="fas fa-envelope"></i> Messages</a>
-        <a href="tools.html"><i class="fas fa-tools"></i> Tools</a>
-        <a href="ebooks.html"><i class="fas fa-book"></i> Ebooks</a>
-        <a href="tutorials.html"><i class="fas fa-chalkboard-teacher"></i> Tutorials</a>
-        <a href="offers.html"><i class="fas fa-gift"></i> Offers</a>
-        <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
-        <a href="#" id="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        <ul>
+          <li><a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a></li>
+          <li><a href="profile.html" class="active"><i class="fas fa-user"></i> Profile</a></li>
+          <li><a href="MyServices.html"><i class="fas fa-briefcase"></i> My Services</a></li>
+          <li><a href="messages.html"><i class="fas fa-envelope"></i> Messages</a></li>
+          <li><a href="tools.html"><i class="fas fa-toolbox"></i> Tools</a></li>
+          <li><a href="ebooks.html"><i class="fas fa-book"></i> Ebooks</a></li>
+          <li><a href="tutorials.html"><i class="fas fa-video"></i> Tutorials</a></li>
+          <li><a href="offers.html"><i class="fas fa-tags"></i> Offers</a></li>
+          <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+          <li><a href="logout.html" style="color: #ff4d4d;"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+        </ul>
       </nav>
     </aside>
 
     <!-- Main Content -->
-    <main class="main">
+    <main class="main-content">
+      <!-- Header -->
       <header>
-        <h1>My Profile</h1>
-        <div class="time" id="time"></div>
+        <div class="user-info">
+          <span>Manage your profile, Nyasha</span>
+          <img src="https://i.pravatar.cc/100" alt="User Profile" />
+          <button id="toggleModeBtn" title="Toggle Light/Dark Mode">
+            <i class="fas fa-adjust"></i>
+          </button>
+          <button id="toggleMenuBtn" title="Toggle Menu">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
       </header>
 
-      <!-- Tabs -->
-      <div class="tabs">
-        <button class="tab-btn active" data-tab="overview">Overview</button>
-        <button class="tab-btn" data-tab="activity">Activity</button>
-        <button class="tab-btn" data-tab="security">Security</button>
-      </div>
-
-      <!-- Overview Tab -->
-      <section class="tab-content active" id="overview">
-        <div class="card profile-card">
-          <div class="profile-image">
-            <img id="profilePic" src="https://via.placeholder.com/120" alt="Profile" class="profile-pic" />
-            <input type="file" id="uploadInput" hidden />
-            <label for="uploadInput" class="upload-btn"><i class="fas fa-camera"></i> Change Photo</label>
+      <!-- Profile Info Section -->
+      <section class="profile-section">
+        <h2><i class="fas fa-user-circle"></i> My Profile</h2>
+        <div class="profile-container">
+          <div class="profile-avatar">
+            <img src="https://i.pravatar.cc/150?img=3" alt="Profile Avatar" />
+            <input type="file" id="avatarUpload" />
           </div>
-          <div class="profile-info">
-            <h2>Nyasha Desire Sadzamari</h2>
-            <p><strong>Smart Hustler | Web Developer</strong></p>
-            <p><i class="fas fa-envelope"></i> nyashadesire07@gmail.com</p>
-            <p><i class="fas fa-map-marker-alt"></i> Cowdray Park, Bulawayo</p>
+          <div class="profile-details">
+            <label>Name: <input type="text" value="Nyasha Desire Sadzamari" /></label>
+            <label>Email: <input type="email" value="nyashadesire07@gmail.com" /></label>
+            <label>Phone: <input type="tel" value="+263774571833" /></label>
+            <label>Address: <input type="text" value="5357 Cowdray Park, Bulawayo, Zimbabwe" /></label>
+            <button class="save-btn">Save Changes</button>
           </div>
         </div>
-
-        <form class="edit-profile-form">
-          <h2>Edit Profile</h2>
-          <div class="form-group">
-            <label>Full Name</label>
-            <input type="text" value="Nyasha Desire Sadzamari">
-          </div>
-          <div class="form-group">
-            <label>Email</label>
-            <input type="email" value="nyashadesire07@gmail.com">
-          </div>
-          <div class="form-group">
-            <label>Location</label>
-            <input type="text" value="Cowdray Park, Bulawayo">
-          </div>
-          <div class="form-group">
-            <label>Bio</label>
-            <textarea rows="3">Web Developer & Founder of OrionStarzWebServices</textarea>
-          </div>
-          <button type="submit" class="form-btn">Save Changes</button>
-        </form>
       </section>
 
-      <!-- Activity Tab -->
-      <section class="tab-content" id="activity">
-        <h2>Recent Activity</h2>
-        <ul class="announcements">
-          <li><strong>May 21:</strong> Uploaded a new project to Services.</li>
-          <li><strong>May 20:</strong> Replied to 3 client messages.</li>
-          <li><strong>May 18:</strong> Accessed 2 new tutorials.</li>
+      <!-- Activity Feed Section -->
+      <section class="tools">
+        <h2><i class="fas fa-clock"></i> Recent Activity</h2>
+        <ul class="activity-feed">
+          <li><i class="fas fa-briefcase"></i> Added a new service: Web Design</li>
+          <li><i class="fas fa-envelope"></i> Replied to a client message</li>
+          <li><i class="fas fa-cogs"></i> Updated profile information</li>
         </ul>
-      </section>
-
-      <!-- Security Tab -->
-      <section class="tab-content" id="security">
-        <h2>Security Settings</h2>
-        <form>
-          <div class="form-group">
-            <label>Current Password</label>
-            <input type="password">
-          </div>
-          <div class="form-group">
-            <label>New Password</label>
-            <input type="password">
-          </div>
-          <div class="form-group">
-            <label>Confirm New Password</label>
-            <input type="password">
-          </div>
-          <button type="submit" class="form-btn">Update Password</button>
-        </form>
       </section>
     </main>
   </div>
 
-  <script src="dashboard.js"></script>
+  <!-- JavaScript -->
+  <script src="profile.js"></script>
+  <script>
+  const toggleBtn = document.getElementById('toggleMenuBtn');
+  const sidebar = document.getElementById('sidebar');
+
+  toggleBtn.addEventListener('click', () => {
+    sidebar.classList.toggle('open');
+  });
+</script>
+
 </body>
 </html>
