--- a/settings.html
+++ b/settings.html
@@ -5,56 +5,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Settings - Smart Hustle Hub</title>
   <link rel="stylesheet" href="dashboard.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-<body>
+<body class="dark-mode">
   <div class="dashboard">
-    <aside class="sidebar">
-      <h2>Smart Hustle Hub</h2>
+    <!-- Sidebar -->
+    <aside class="sidebar" id="sidebar">
+      <div class="logo">Smart Hustle Hub</div>
       <nav>
-        <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-        <a href="profile.html"><i class="fas fa-user"></i> Profile</a>
-        <a href="services.html"><i class="fas fa-briefcase"></i> My Services</a>
-        <a href="messages.html"><i class="fas fa-envelope"></i> Messages</a>
-        <a href="tools.html"><i class="fas fa-tools"></i> Tools</a>
-        <a href="ebooks.html"><i class="fas fa-book"></i> Ebooks</a>
-        <a href="tutorials.html"><i class="fas fa-chalkboard-teacher"></i> Tutorials</a>
-        <a href="offers.html"><i class="fas fa-gift"></i> Offers</a>
-        <a href="settings.html" class="active"><i class="fas fa-cog"></i> Settings</a>
-        <a href="#" id="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        <ul>
+          <li><a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a></li>
+          <li><a href="profile.html"><i class="fas fa-user"></i> Profile</a></li>
+          <li><a href="MyServices.html"><i class="fas fa-briefcase"></i> My Services</a></li>
+          <li><a href="messages.html"><i class="fas fa-envelope"></i> Messages</a></li>
+          <li><a href="tools.html"><i class="fas fa-toolbox"></i> Tools</a></li>
+          <li><a href="ebooks.html"><i class="fas fa-book"></i> Ebooks</a></li>
+          <li><a href="tutorials.html"><i class="fas fa-video"></i> Tutorials</a></li>
+          <li><a href="offers.html"><i class="fas fa-tags"></i> Offers</a></li>
+          <li><a href="settings.html" class="active"><i class="fas fa-cog"></i> Settings</a></li>
+          <li><a href="logout.html" style="color: #ff4d4d;"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+        </ul>
       </nav>
     </aside>
 
-    <main class="main">
-      <header class="dashboard-header">
-        <h1>Account Settings</h1>
-        <p id="time"></p>
+    <!-- Main Content -->
+    <main class="main-content">
+      <header>
+        <div class="user-info">
+          <span>Settings</span>
+          <img src="https://i.pravatar.cc/100" alt="User Profile" />
+          <button id="toggleModeBtn"><i class="fas fa-adjust"></i></button>
+          <button id="toggleMenuBtn"><i class="fas fa-bars"></i></button>
+        </div>
       </header>
 
       <section class="settings-section">
-        <form id="settingsForm">
-          <label for="username">Username</label>
-          <input type="text" id="username" value="NyashaDesire" required />
+        <h2>User Preferences</h2>
 
-          <label for="email">Email</label>
-          <input type="email" id="email" value="nyashadesire07@gmail.com" required />
+        <div class="setting-item">
+          <label for="emailToggle">Email Notifications</label>
+          <input type="checkbox" id="emailToggle" />
+        </div>
 
-          <label for="password">New Password</label>
-          <input type="password" id="password" placeholder="Enter new password" />
-
-          <label for="theme">Theme Preference</label>
-          <select id="theme">
-            <option value="default">Default (Blue/White)</option>
-            <option value="dark">Dark Mode</option>
-            <option value="light">Light Mode</option>
+        <div class="setting-item">
+          <label for="languageSelect">Preferred Language</label>
+          <select id="languageSelect">
+            <option value="en">English</option>
+            <option value="fr">French</option>
+            <option value="de">German</option>
+            <option value="es">Spanish</option>
           </select>
+        </div>
 
-          <button type="submit">Save Settings</button>
-        </form>
+        <h2>Change Password</h2>
+
+        <div class="setting-item">
+          <input type="password" id="currentPassword" placeholder="Current Password" />
+        </div>
+        <div class="setting-item">
+          <input type="password" id="newPassword" placeholder="New Password" />
+        </div>
+        <div class="setting-item">
+          <input type="password" id="confirmPassword" placeholder="Confirm New Password" />
+        </div>
+        <button class="save-btn" onclick="changePassword()">Change Password</button>
+
+        <h2>Danger Zone</h2>
+
+        <button class="delete-btn" onclick="deleteAccount()">Delete Account</button>
       </section>
     </main>
   </div>
 
   <script src="settings.js"></script>
+  <script>
+    document.getElementById("toggleMenuBtn").addEventListener("click", () => {
+      document.getElementById("sidebar").classList.toggle("open");
+    });
+  </script>
 </body>
 </html>
