--- a/messages.html
+++ b/messages.html
@@ -53,7 +53,7 @@
           <button class="tab" data-chat="private">Private Messages</button>
         </div>
 
-        <!-- Group Chat Rooms -->
+        <!-- Group Chat -->
         <div class="chat-box active" id="groupChatBox">
           <select id="groupRoomSelect">
             <option value="creators">Content Creators</option>
@@ -91,32 +91,6 @@
             <button id="sendPrivateBtn"><i class="fas fa-paper-plane"></i></button>
           </div>
         </div>
-        <!-- Room Tabs --
-<div class="room-tabs">
-  <button class="room-tab active">General</button>
-  <button class="room-tab">Developers</button>
-  <button class="room-tab">Support</button>
-</div>
-
-<!-- Private Inbox --
-<div class="inbox-container">
-  <div class="inbox-users">
-    <div class="inbox-user active">John Doe</div>
-    <div class="inbox-user">Alice</div>
-    <div class="inbox-user">Support</div>
-  </div>
-
-  <div class="inbox-chat">
-    <div class="chat-messages">
-      <!-- message.user / message.ai --
-    </div>
-    <div class="chat-input">
-      <input type="text" placeholder="Type a message...">
-      <button>Send</button>
-    </div>
-  </div>
-</div>-->
-
       </section>
     </main>
   </div>
